WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
306073
[Navigation API] Fix order of setting interception state in NavigateEvent::intercept()
https://bugs.webkit.org/show_bug.cgi?id=306073
Summary
[Navigation API] Fix order of setting interception state in NavigateEvent::in...
rupin
Reported
2026-01-22 16:04:24 PST
[Navigation API] Fix order of setting interception state in NavigateEvent::intercept
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2026-01-22 16:04:33 PST
<
rdar://problem/168715747
>
rupin
Comment 2
2026-01-22 16:12:00 PST
Pull request:
https://github.com/WebKit/WebKit/pull/57085
EWS
Comment 3
2026-01-23 12:03:31 PST
Committed
306111@main
(8a90f367b487): <
https://commits.webkit.org/306111@main
> Reviewed commits have been landed. Closing PR #57085 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug