[Navigation API] Fix order of setting interception state in NavigateEvent::intercept() https://bugs.webkit.org/show_bug.cgi?id=306073 rdar://168715747

Reviewed by Basuke Suzuki.

According to the spec, setting the interception state to "intercepted" is
step 6. Right now it's happening much later. So we fix this ordering.
(https://html.spec.whatwg.org/multipage/nav-history-apis.html#dom-navigateevent-intercept).

This change is tested by existing WPT Navigation API layout tests.

* Source/WebCore/page/NavigateEvent.cpp:
(WebCore::NavigateEvent::intercept):

Canonical link: https://commits.webkit.org/306111@main